[tool.poetry]
name = "tiktokpy"
version = "0.8.9"
description = "Tool for automated TikTok interactions."

license = "MIT"
authors = ["Evgeny Kemerov <eskemerov@gmail.com>"]

readme = "README.md"
include = ["LICENSE"]

repository = "https://github.com/sudoguy/tiktokpy/"
homepage = "https://github.com/sudoguy/tiktokpy/"

keywords = ["tiktok", "bot", "api", "wrapper", "tiktokbot", "tiktokpy", "webapi", "marketing"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
tiktokpy = "tiktokpy.cli:app"

[tool.poetry.dependencies]
python = "^3.6.1"
pyppeteer = "^0.2.2"
loguru = "^0.5.0"
pydantic = "^1.6.1"
tqdm = "^4.48.0"
pyppeteer-stealth = "^2.6.0"
parsel = { version ="^1.6.0", optional = true }
dynaconf = "^3.0.0"
humanize = "^3.2.0"
typer = "^0.3.1"

[tool.poetry.extras]
html = ["parsel"]

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
pytest-cov = "^2.7.1"
pytest-mock = "^3.2.0"
pre-commit = "^2.6.0"
flake8 = "^3.7.8"
flake8-blind-except = "^0.2.0"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.0"
flake8-deprecated = "^1.3"
flake8-mutable = "^1.2.0"
flake8-tidy-imports = "^4.0.0"
flake8-print = "^4.0.0"
isort = "^5.1.4"
mypy = "*"
mkdocs = "^1.0.4"
mkdocs-material = "^6.1.7"
mkautodoc = "^0.1.0"
bump2version = "^1.0.0"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
