[tool.poetry]
name = "tiktokpy"
version = "0.9.2"
description = "Tool for automated TikTok interactions."

license = "MIT"
authors = ["Evgeny Kemerov <eskemerov@gmail.com>"]

readme = "README.md"
include = ["LICENSE"]

repository = "https://github.com/sudoguy/tiktokpy/"
homepage = "https://github.com/sudoguy/tiktokpy/"

keywords = ["tiktok", "bot", "api", "wrapper", "tiktokbot", "tiktokpy", "webapi", "marketing"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
tiktokpy = "tiktokpy.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.6.0"
pydantic = "^1.6.1"
tqdm = "^4.48.0"
parsel = { version ="^1.6.0", optional = true }
dynaconf = "^3.0.0"
humanize = "^4.0.0"
typer = "^0.4.0"
playwright = "^1.18.2"
playwright-stealth = "^1.0.5"

[tool.poetry.extras]
html = ["parsel"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.2.0"
pre-commit = "^2.6.0"
flake8 = "^5.0.0"
flake8-blind-except = "^0.2.1"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.0"
flake8-deprecated = "^2.0.1"
flake8-mutable = "^1.2.0"
flake8-tidy-imports = "^4.0.0"
flake8-print = "^5.0.0"
isort = "^5.1.4"
mypy = "*"
bump2version = "^1.0.0"
pytest-asyncio = "^0.20.2"
flake8-broken-line = "^0.6.0"
flake8-bugbear = "^22.7.1"
flake8-logging-format = "^0.9.0"
flake8-pytest-style = "^1.4.0"
pylint = "^2.7.2"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
line_length = 100


[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    '.venv',
    '.eggs',
    '*.egg',
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.mccabe]
max-complexity = 6
